[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am chaithanya beeram and this gonna be my first web page!
+            Hi! I am Chaithanya Beeram!
         </div>
+        <p>This will be the startup page for my app</p>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
