[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Chaithanya Beeram!
         </div>
-        <p>This will be the startup page for my app</p>
+        <h1>This will be the startup page for my app</h1>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
